--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>vue-mpvue-test</title>
   </head>
   <body>
+    <!--我在这里加一行注释，测试一下-->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
