--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <!-- change 我们本地改的不一样就会出现冲突 -->
+  <!-- change 我的本地修改 -->
 </html>
